# netbox

./: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  debug_resp.py  diagnose_server.md  docker-compose.yml  docker_setup_and_test.sh  main.cpp  package-lock.json  performance_test.py  performance_test_websocket.py  redis_stress_test.py  requirements.txt  simple_im_test.py  test_websocket_broadcast.py  websocket_stress_test.py
.claude/: settings.local.json
.github/workflows/: tests.yml
MedicalMonitor/: COMPILE_AND_TEST.md  DAY3-4_WORK_SUMMARY.md  README.md
MedicalMonitor/protocol/: MedicalProtocol.h
NetFramework/include/app/: ApplicationRegistry.h
NetFramework/include/server/: TcpServer.h
NetFramework/src/app/: ApplicationRegistry.cpp
NetFramework/src/base/: Logger.cpp
NetFramework/src/server/: TcpServer.cpp  UdpServer.cpp
NetFramework/src/util/: EnhancedConfigReader.cpp
Protocol/include/: IMProtocol.h  MedicalProtocol.h  ModbusProtocol.h  ProtocolRegister.h  WebSocketProtocol.h  base64.h
Protocol/src/: IMProtocol.cpp  MedicalProtocol.cpp  ModbusProtocol.cpp  ProtocolRouter.cpp  PureRedisProtocol.cpp  RedisProtocol.cpp  WebSocketProtocol.cpp  base64.cpp
app/include/: AIAssistant.h  ApplicationServer.h  ECGDeviceServer.h  IMServer.h  WebSocketServer.h
app/src/: AIAssistant.cpp  ApplicationServer.cpp  ECGDeviceServer.cpp  MQTTClient.cpp  RedisApplicationServer.cpp  WebSocketServer.cpp  WebSocketTest.cpp
client/: im_client_test.py
config/: config-docker.yaml  config-ecg-device.yaml  config-im.yaml  config-iot-gateway.yaml  config-redis.yaml  config-vision-camera.yaml  config-vision.yaml  config-websocket.yaml  config.yaml  config_redis_app.yaml  mosquitto.conf
docs/: ARCHITECTURE.md  FACTORY_MONITOR_GUIDE.md  IOT_GATEWAY_GUIDE.md  MQTT_INTEGRATION.md  performance_optimization_2025_12_10.md  rate200_performance_degradation_analysis.md
examples/: factory_monitor_simulator.py  iot_gateway_demo.py  simple_modbus_simulator.py  web_monitor.html
output/vision/recordings/: recording_20260104_014200_222.avi  recording_20260104_014216_261.avi  recording_20260104_014312_242.avi  recording_20260104_014458_234.avi
performance_results/: README_TEMPLATE.md
plugins/echo/: EchoServerPlugin.cpp
plugins/im/: IMServer.cpp  IMServerPlugin.cpp
plugins/iot/: IoTGatewayPlugin.cpp  IoTGatewayServer.cpp  IoTGatewayServer.h  IoTGatewayServerSimple.cpp  IoTGatewaySimplePlugin.cpp
plugins/medical/: ECGDevicePlugin.cpp
plugins/redis/: DirectRedisPlugin.cpp  RedisApplicationPlugin.cpp
plugins/udp/: UdpEchoPlugin.cpp
plugins/vision/: README.md  VisionServer.cpp  VisionServer.h  VisionServerPlugin.cpp
plugins/websocket/: WebSocketPlugin.cpp
tools/: README.md  memory_leak_detection.sh  mqtt_bridge.py  performance_benchmark.py  run_all_tests.sh  run_performance_test.bat  run_test.ps1  run_test_windows.ps1
